# setup-camera

./: README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  camera_drawer.c  camera_drawer.h  camera_encoder.c  camera_encoder.h  camera_encoder_common.c  camera_encoder_common.h  camera_pattern.c  camera_pattern.h  font.c  http_server.c  http_server.h  idf_component.yml  main.c  rtsp_server.c  rtsp_server.h
